--- a/DsWorkAndroid/App/paper/res/layout/image_viewpager_activity.xml
+++ b/DsWorkAndroid/App/paper/res/layout/image_viewpager_activity.xml
@@ -1,34 +1,46 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
-    <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/image_view_pager"
-        android:scrollbars="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent">
-        <!-- 
-        <android.support.v4.view.PagerTitleStrip
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="top" 
-	        android:background="@color/red"
-	        android:textColor="#fff"
-	        android:paddingTop="4dp"
-	        android:paddingBottom="4dp" />
-         -->
-    </android.support.v4.view.ViewPager>
-    
-	<dswork.android.lib.core.ui.PosPoint 
-	   android:id="@+id/points"
-	   android:layout_width="fill_parent"
-	   android:layout_height="wrap_content"
-	   android:orientation="horizontal"
-	   android:layout_gravity="center|bottom"
-	   android:gravity="center"/>
 
-</FrameLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/image_view_pager"
+            android:scrollbars="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <!--
+            <android.support.v4.view.PagerTitleStrip
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="top"
+                android:background="@color/red"
+                android:textColor="#fff"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp" />
+             -->
+        </android.support.v4.view.ViewPager>
+
+        <dswork.android.lib.core.ui.PosPoint
+            android:id="@+id/points"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center|bottom"
+            android:gravity="center"/>
+    </FrameLayout>
+
+</LinearLayout>
 
