--- a/DsWorkAndroid/App/paper/res/layout/main_activity.xml
+++ b/DsWorkAndroid/App/paper/res/layout/main_activity.xml
@@ -4,14 +4,15 @@
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
-      
-	<android.support.v7.widget.Toolbar  
+
+	<android.support.v7.widget.Toolbar
 	    android:id="@+id/toolbar"
 	    android:layout_height="wrap_content"
 	    android:layout_width="match_parent"
-	    android:minHeight="?attr/actionBarSize"
-		android:background="@color/blue_light"/>
-   
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="5dp"/>
+
 	<android.support.v4.widget.DrawerLayout 
 	    android:id="@+id/drawer_layout"
 	    android:layout_width="match_parent"
