--- a/DsWorkAndroid/App/paper/res/menu/main.xml
+++ b/DsWorkAndroid/App/paper/res/menu/main.xml
@@ -1,15 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.paper.MainActivity" >
 
     <item
         android:id="@+id/menu_download"
-        android:showAsAction="withText|ifRoom"
-        android:title="@string/menu_download"/>
-    <item
-        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        app:showAsAction="withText|always"
+        android:icon="@android:drawable/stat_sys_download"
+        android:title="@string/menu_download"/>
 
 </menu>
