--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="DsWorkJava">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.config"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.core"/>
@@ -10,7 +11,6 @@
         <wb-resource deploy-path="/" source-path="/web"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.jdbc4"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/log4jdbc_spy"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
