--- a/CodeBuilder/builder/template/java/db/tab/imapper_oracle.vm
+++ b/CodeBuilder/builder/template/java/db/tab/imapper_oracle.vm
@@ -13,8 +13,8 @@
 	#set($tmp=$columnModel.ColumnName.ToLower())
 	#set($tmp2=$columnModel.ColumnName)
 	#if($columnModel.IsPK)<id property="$tmp" column="$tmp2" />
-#else<result property="$tmp" column="$tmp2" />
-#end
+	#else<result property="$tmp" column="$tmp2" />
+	#end
 #end
 #end
 #macro (getCommonColumns $list)
@@ -40,62 +40,65 @@
 	#set($tmp=$columnModel.ColumnName.ToLower())
 #if($count==1)
 
-		#elseif($count<$list.Count)$tmp.ToUpper()=#{$tmp},
-		#else$tmp.ToUpper()=#{$tmp}
+			#elseif($count<$list.Count)$tmp.ToUpper()=#{$tmp},
+			#else$tmp.ToUpper()=#{$tmp}
 #end
 #end
 #end
 #macro (getIfs $list)
 #foreach($columnModel in $list)
 #set($tmp=$columnModel.ColumnName.ToLower())#if(!$columnModel.IsPK)
-		<if test="@Ognl@isNotEmpty($tmp)"> and $tmp.ToUpper() like '%'||#{$tmp}||'%' </if>
+			<if test="@Ognl@isNotEmpty($tmp)"> and $tmp.ToUpper() like '%'||#{$tmp}||'%' </if>
 #end#end
 #end
 <mapper namespace="${Namespace}.model${Module}.${Model}">
 
-<insert id="insert" parameterType="${Namespace}.model${Module}.${Model}">
-	<selectKey resultType="Long" order="BEFORE" keyProperty="id">
-		select SEQ_ID.NEXTVAL from dual
-	</selectKey>
-	insert into ${vo.TableName}
-	(#getCommonColumns($v))
-	values
-	(#getInsertValues($v))
-</insert>
+	<insert id="insert" parameterType="${Namespace}.model${Module}.${Model}">
+		<selectKey resultType="Long" order="BEFORE" keyProperty="id">
+			select SEQ_ID.NEXTVAL from dual
+		</selectKey>
+		insert into ${vo.TableName}
+		(#getCommonColumns($v))
+		values
+		(#getInsertValues($v))
+	</insert>
 
-<delete id="delete">
-	delete from ${vo.TableName} where ID=#{id}
-</delete>
+	<delete id="delete">
+		delete from ${vo.TableName} where ID=#{id}
+	</delete>
 
-<update id="update" parameterType="${Namespace}.model${Module}.${Model}">
-	update ${vo.TableName} set#getUpdateValues($v)
-	where ID=#{id}
-</update>
+	<update id="update" parameterType="${Namespace}.model${Module}.${Model}">
+		update ${vo.TableName} set#getUpdateValues($v)
+		where ID=#{id}
+	</update>
 
-<resultMap id="result" type="${Namespace}.model${Module}.${Model}">
-#getResult($v)
+	<resultMap id="result" type="${Namespace}.model${Module}.${Model}">
+	#getResult($v)
 </resultMap>
 
-<sql id="columns">#getCommonColumns($v)</sql>
+	<sql id="columns">
+		#getCommonColumns($v)
+
+	</sql>
 	
-<sql id="dynamicWhere">
-	<where>
+	<sql id="dynamicWhere">
+		<where>
 #getIfs($v)
-	</where>
-</sql>
+		</where>
+	</sql>
 
-<select id="select" resultMap="result">
-	select <include refid="columns" /> from ${vo.TableName} where ID=#{id}
-</select>
+	<select id="select" resultMap="result">
+		select <include refid="columns" /> from ${vo.TableName} where ID=#{id}
+	</select>
 
-<select id="query" resultMap="result">
-	select <include refid="columns" /> from ${vo.TableName}
-	<include refid="dynamicWhere" />
-</select>
+	<select id="query" resultMap="result">
+		select <include refid="columns" /> from ${vo.TableName}
+		<include refid="dynamicWhere" />
+	</select>
 
-<select id="queryCount" resultType="int">
-	select count(1) from ${vo.TableName}
-	<include refid="dynamicWhere" />
-</select>
+	<select id="queryCount" resultType="int">
+		select count(1) from ${vo.TableName}
+		<include refid="dynamicWhere" />
+	</select>
 
 </mapper>
