--- a/web/web/js/jskey/themes/page/jskey_page.css
+++ b/web/web/js/jskey/themes/page/jskey_page.css
@@ -15,4 +15,4 @@
 
 .jskey_page_skin_default a    {border:1px solid #ccc;background-color:#ffffff;}
 .jskey_page_skin_default span {height:28px;line-height:28px;color:#333333;}
-.jskey_page_skin_default .page{font-weight:700;color:#ffffff;background-color:#111111;}
+.jskey_page_skin_default .page{font-weight:700;color:#000000;background-color:#ffffff;}
