--- a/web/web/js/jskey/themes/page/jskey_page.css
+++ b/web/web/js/jskey/themes/page/jskey_page.css
@@ -2,11 +2,11 @@
  *jskey.page样式
  */
 .jskey_page{font-size:0;clear:both;}
-.jskey_page *{display:inline-block;vertical-align:top;font-size:12px;color:#333333;}
+.jskey_page *{display:inline-block;vertical-align:top;font-size:12px;color:#333333;width:auto;}
 .jskey_page a,
 .jskey_page span {height:26px;line-height:26px;border-radius:2px;}
 .jskey_page a    {margin:0 3px 6px 3px;padding:0 10px;text-decoration:none;}
-.jskey_page .page{margin:0 3px 6px 3px;padding:0 10px;}
+.jskey_page .page{margin:0 3px 6px 3px;padding:0 10px;width:auto;}
 
 .jskey_page input, .jskey_page button, .jskey_page select{border:1px solid #ccc;background-color:#ffffff;}
 .jskey_page input {width:28px;height:24px;line-height:24px;margin:0px 5px 0px 5px;padding:0 5px;}
