--- a/web/web/js/jskey/themes/page/jskey_page.css
+++ b/web/web/js/jskey/themes/page/jskey_page.css
@@ -5,14 +5,14 @@
 .jskey_page *{display:inline-block;vertical-align:top;font-size:12px;color:#333333;width:auto;}
 .jskey_page a,
 .jskey_page span {height:26px;line-height:26px;border-radius:2px;}
-.jskey_page a    {margin:0 3px 6px 3px;padding:0 10px;text-decoration:none;}
-.jskey_page .page{margin:0 3px 6px 3px;padding:0 10px;width:auto;}
+.jskey_page a    {margin:0 3px 6px 3px;padding:0 10px;cursor:pointer;text-decoration:none;}
+.jskey_page .page{height:28px;line-height:28px;margin:0 3px 6px 3px;padding:0 10px;width:auto;}
 
 .jskey_page input, .jskey_page button, .jskey_page select{border:1px solid #ccc;background-color:#ffffff;}
-.jskey_page input {width:28px;height:24px;line-height:24px;margin:0px 5px 0px 5px;padding:0 5px;}
-.jskey_page button{           height:26px;line-height:26px;margin:0px 0px 0px 5px;padding:0 5px;}
-.jskey_page select{width:50px;height:26px;line-height:26px;margin:0px 5px 0px 5px;padding:0;}
+.jskey_page input {height:24px;line-height:24px;margin:0px 5px 0px 5px;padding:0 5px;width:28px;}
+.jskey_page button{height:26px;line-height:26px;margin:0px 0px 0px 5px;padding:0 5px;}
+.jskey_page select{height:26px;line-height:26px;margin:0px 5px 0px 5px;padding:0;width:50px;}
 
-.jskey_page_skin_default a    {border:1px solid #ccc;background-color:#ffffff;}
-.jskey_page_skin_default span {height:28px;line-height:28px;color:#333333;}
+.jskey_page_skin_default a    {border:1px solid #ccc;background-color:#ffffff;color:#333333;}
+.jskey_page_skin_default span {color:#333333;}
 .jskey_page_skin_default .page{font-weight:700;color:#000000;background-color:#ffffff;}
