--- a/DsEp/web/html/site/html/themes/web.css
+++ b/DsEp/web/html/site/html/themes/web.css
@@ -104,7 +104,7 @@ a:hover,a:active{color:#00c;}
 .listpage div.subtitle{margin:0 auto;width:90%;font-size:12px;color:#999;text-align:right;line-height:40px;word-break:break-all;word-wrap:break-word;}
 .listpage div.content{margin:0 auto;width:90%;text-align:left;line-height:30px;padding:20px;word-break:break-all;word-wrap:break-word;}
 
-.foucs {width:400px;height:320px;padding:0;margin:0;overflow:hidden;}
+.foucs {width:400px;height:320px;padding:0;margin:0;overflow:hidden;text-align:left;}
 .foucs div,
 .foucs span{height:32px;position:absolute;left:0;bottom:0;display:block;padding:0;margin:0;}
 .foucs div{width:400px;background:black;opacity:0.5;-moz-opacity:0.5;filter:alpha(opacity=50);}
