--- a/DsCas/portal/web/frame/style/frame.css
+++ b/DsCas/portal/web/frame/style/frame.css
@@ -46,6 +46,8 @@ _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="style/top/right.
 .middleframe .drop {height:100%;float:left;position:relative;width:6px;background-color:#E0ECFF;overflow:hidden;}
 .middleframe .drop img {position:absolute;top:50%;cursor:pointer;}
 .middleframe .view {height:100%;background-color:#FEFEFE;overflow:hidden;}
+.icon-closeone{background:url(middle/closeone.png) no-repeat;}
+.icon-closeall{background:url(middle/closeall.png) no-repeat;}
 
 
 .bottomframe {width:100%;height:100%;line-height:25px;color:#2e3094;text-align:center;
