--- a/DsCas/portal/web/frame/style/frame.css
+++ b/DsCas/portal/web/frame/style/frame.css
@@ -7,11 +7,10 @@ iframe {margin:0px;padding:0px;border:none;width:100%;height:100%;}
 @font-face {
 	font-family:"dsworkfont" !important;
 	src:url("fonts/dsworkfont.eot");/* IE9+ */
-	src:local('☺'),
-	  url('fonts/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-	  url('fonts/dsworkfont.woff') format('woff'),/* chrome、firefox */
-	  url('fonts/dsworkfont.ttf') format('truetype'),/* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
-	  url('fonts/dsworkfont.svg#iconfont') format('svg');/* iOS 4.1- */
+	src:url('fonts/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
+		url('fonts/dsworkfont.woff') format('woff'),/* chrome、firefox */
+		url('fonts/dsworkfont.ttf') format('truetype'),/* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
+		url('fonts/dsworkfont.svg#iconfont') format('svg');/* iOS 4.1- */
 	font-weight:normal;
 	font-style:normal;
 }
