--- a/DsCas/portal/web/frame/style/frame.css
+++ b/DsCas/portal/web/frame/style/frame.css
@@ -5,7 +5,7 @@ html,body {height:100%;margin:0px;padding:0px;overflow:hidden;}
 iframe {margin:0px;padding:0px;border:none;width:100%;height:100%;}
 
 @font-face {
-	font-family:"dsworkfont" !important;
+	font-family:"dsworkfont",Sans-Serif;
 	src:url("fonts/dsworkfont.eot");/* IE9+ */
 	src:url('fonts/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
 		url('fonts/dsworkfont.woff') format('woff'),/* chrome、firefox */
