--- a/web/web/fonts/dsworkfont.css
+++ b/web/web/fonts/dsworkfont.css
@@ -1,10 +1,10 @@
 @font-face {
-	font-family:"dsworkfont",Sans-Serif;
+	font-family:"dsworkfont";
 	src:url("dsworkfont/dsworkfont.eot");/* IE9+ */
 	src:url('dsworkfont/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		url('dsworkfont/dsworkfont.woff') format('woff'),/* chrome、firefox */
-		url('dsworkfont/dsworkfont.ttf') format('truetype'),/* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
-		url('dsworkfont/dsworkfont.svg#iconfont') format('svg');/* iOS 4.1- */
+		url('dsworkfont/dsworkfont.woff') format('woff'),/* chrome,firefox */
+		url('dsworkfont/dsworkfont.ttf') format('truetype'),/* chrome,firefox,opera,Safari,Android,iOS4.2+ */
+		url('dsworkfont/dsworkfont.svg#iconfont') format('svg');/* iOS4.1- */
 	font-weight:normal;
 	font-style:normal;
 }
