--- a/DsCas/portal/web/frame/style/frame.css
+++ b/DsCas/portal/web/frame/style/frame.css
@@ -5,12 +5,12 @@ html,body {height:100%;margin:0px;padding:0px;overflow:hidden;}
 iframe {margin:0px;padding:0px;border:none;width:100%;height:100%;}
 
 @font-face {
-	font-family:"dsworkfont",Sans-Serif;
-	src:url("fonts/dsworkfont.eot");/* IE9+ */
-	src:url('fonts/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-		url('fonts/dsworkfont.woff') format('woff'),/* chrome、firefox */
-		url('fonts/dsworkfont.ttf') format('truetype'),/* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
-		url('fonts/dsworkfont.svg#iconfont') format('svg');/* iOS 4.1- */
+	font-family:"dsworkfont";
+	src:url("dsworkfont/dsworkfont.eot");/* IE9+ */
+	src:url('dsworkfont/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
+		url('dsworkfont/dsworkfont.woff') format('woff'),/* chrome,firefox */
+		url('dsworkfont/dsworkfont.ttf') format('truetype'),/* chrome,firefox,opera,Safari,Android,iOS4.2+ */
+		url('dsworkfont/dsworkfont.svg#dsworkfont') format('svg');/* iOS4.1- */
 	font-weight:normal;
 	font-style:normal;
 }
