--- a/web/share/dswork/Views/Commons/UpdAjax.cshtml
+++ b/web/share/dswork/Views/Commons/UpdAjax.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"/>
 <title>@RenderSection("title", false)</title>
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css" />
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
