--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -146,13 +146,13 @@ div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidd
 .topTable{border-bottom:none;}
 .bottomTable{border-top:none;}
 .bottomTable td{background-color:#d9e5fd;}
-.listTable{border:none;}
-.listTable tr{height:25px;line-height:1.5em;padding:0px 2px;}
-.listTable td{line-height:1.5em;vertical-align:middle;text-align:center;background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;}
+.listTable{border:none;width:99%;margin:0 auto;}
+.listTable tr{height:33px;line-height:1.5em;padding:0px 5px;}
+.listTable td{line-height:1.5em;vertical-align:middle;text-align:center;background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;font-family:"Microsoft Yahei","Hiragino Sans GB","Helvetica Neue",Helvetica,tahoma,arial,Verdana,sans-serif,"\5B8B\4F53","WenQuanYi Micro Hei";}
 .listTable tr tr, .listTable td td{height:auto;line-height:normal;}
-.listTable tr.list_title{height:30px;}
+.listTable tr.list_title{height:33px;}
 .listTable tr.list_title td{color:#24373d;}
-/*奇行*/.listTable tr.list_odd{}  .listTable tr.list_odd  td{background-color:#eff4ff;}
+/*奇行*/.listTable tr.list_odd{}  .listTable tr.list_odd  td{background-color:#fcfcfc;}
 /*偶行*/.listTable tr.list_even{} .listTable tr.list_even td{background-color:#ffffff;}
 /*停留*/.listTable tr.list_over{} .listTable tr.list_over td{background-color:#fdfad0;}
 /*默认*/.listTable tr.list{}      .listTable tr.list      td{background-color:#ffffff;}
@@ -164,8 +164,8 @@ div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidd
 .listLogo td, .listTable tr.list_title td, .listTable tr.list_title th{background-color:#e0ecff;}
 .listLogo input.button{background-color:#f0f1f2;}
 
-.queryTable{width:100%;border:#c2c2c2 solid 1px;}
-.queryTable tr{height:25px;}
+.queryTable{border:#c2c2c2 solid 1px;width:99%;margin:0 auto;}
+.queryTable tr{height:30px;}
 .queryTable td{background-color:#ffffff;padding:0em;}
 .queryTable td.title{text-align:right;padding-left:1px;}
 .queryTable td.input{text-align:left;padding-right:1px;}
