--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -154,10 +154,10 @@ div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidd
 .bottomTable td{background-color:#d9e5fd;}
 .listTable{border:none;width:99%;margin:0 auto;}
 .listTable tr{height:33px;line-height:1.5em;padding:0px 5px;}
-.listTable td{line-height:1.5em;vertical-align:middle;text-align:left;background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;}
+.listTable td{line-height:1.5em;vertical-align:middle;text-align:center;background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;}
 .listTable tr tr, .listTable td td{height:auto;line-height:normal;}
 .listTable tr.list_title{height:33px;}
-.listTable tr.list_title td{color:#24373d;text-align:center;}
+.listTable tr.list_title td{color:#24373d;}
 /*奇行*/.listTable tr.list_odd{}  .listTable tr.list_odd  td{background-color:#fcfcfc;}
 /*偶行*/.listTable tr.list_even{} .listTable tr.list_even td{background-color:#ffffff;}
 /*停留*/.listTable tr.list_over{} .listTable tr.list_over td{background-color:#fdfad0;}
