--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -134,8 +134,22 @@ img{border:0;vertical-align:middle;-ms-interpolation-mode:bicubic;}
 .menuTool-bar     {background:url(img/menu.png) no-repeat 0px -650px;}
 .menuTool-pie     {background:url(img/menu.png) no-repeat 0px -675px;}
 
-input.text,input[type="text"],input[type="password"],select{border:#c2c2c2 solid 1px;min-height:22px;}
-input.text:hover,input[type="text"]:hover,input[type="password"]:hover{border:#0192d0 solid 1px;}}
+input.text,input[type="text"],input[type="password"],select,textarea{padding:1px;box-sizing:border-box;border:solid 1px #c2c2c2;line-height:1.42857;
+    -webkit-transition:all 0.2s linear 0s;
+       -moz-transition:all 0.2s linear 0s;
+         -o-transition:all 0.2s linear 0s;
+            transition:all 0.2s linear 0s;}
+input.text,input[type="text"],input[type="password"],select{height:24px;vertical-align:middle;line-height:1.42857!important;}
+textarea{resize:none;padding:2px;}
+input.text:hover,input[type="text"]:hover,input[type="password"]:hover,select:hover,textarea:hover{border:#0192d0 solid 1px;}
+input.text:focus,input[type="text"]:focus,input[type="password"]:focus,select:focus,textarea:focus{border-color:rgba(82,168,236,0.8);box-shadow:0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);}
+
+input.text.disabled,input[type="text"].disabled,input[type="password"].disabled,select.disabled,textarea.disabled,
+input.text.disabled:focus,input[type="text"].disabled:focus,input[type="password"].disabled:focus,select.disabled:focus,textarea.disabled:focus
+.input-text.disabled,.textarea.disabled,.input-text.disabled.focus,.textarea.disabled.focus{background-color:#ededed; cursor:default;border-color:#ddd;
+	-webkit-box-shadow:inset 0 2px 2px #e8e7e7;
+       -moz-box-shadow:inset 0 2px 2px #e8e7e7;
+            box-shadow:inset 0 2px 2px #e8e7e7;}
 
 span.msg{color:#0000ff;}
 span.tips{color:#0000ff;}
@@ -193,11 +207,11 @@ div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidd
 .pageview a.prev {}/*width:38px;padding-left: 13px;background:url(img/pageview/prev.png ) no-repeat;background-position:left center;}*/
 .pageview a.next {}/*width:38px;padding-right:13px;background:url(img/pageview/next.png ) no-repeat;background-position:right center;}*/
 .pageview a.last {}/*width:38px;padding-right:14px;background:url(img/pageview/last.png ) no-repeat;background-position:right center;}*/
-.pageview input{min-height:18px;line-height:12px;text-align:center;}
-.pageview input.input{width:25px;height:14px;border:#7998c6 solid 1px;font-size:12px;}
-.pageview input.go{width:30px;cursor:pointer;border:#7998C6 solid 1px;height:18px;background:none;font-size:10px;font-weight:bold;border-radius:3px;}
+.pageview input{height:18px;line-height:12px;text-align:center;}
+.pageview input.input{height:18px;width:25px;border:#7998c6 solid 1px;font-size:12px;}
+.pageview input.go{height:18px;width:30px;cursor:pointer;border:#7998C6 solid 1px;background:none;font-size:10px;font-weight:bold;border-radius:3px;}
 .pageview input.go:hover{background-color:#317ef3;color:#fff;}
-.pageview select{min-height:18px;height:18px;width:42px;line-height:1.8em;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
+.pageview select{height:18px;width:42px;line-height:1.8em;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
 
 /*表单*/
 /*标题*/td.form_title{padding-left:3px;padding-right:3px;text-align:right;background-color:#fcfcfc;}
