--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -234,4 +234,4 @@ td.form_bottom{height:30px;background-color:#ffffff;text-align:center;vertical-a
 #div_maskBackground{z-index:9999;position:absolute;left:0px;top:0px;background-color:#fff;}
 #div_maskMessage{z-index:10000;width:300px;padding:40px;font-site:14px;font-weight:bold;position:absolute;text-align:center;background-color:#fff;border:#999 solid 3px;}
 
-.xheTool span{height:22px;overflow:hidden;}
+.xheTool span{height:22px;height:22px !important;overflow:hidden;}
